--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <ul>
                 <h3>Competencies </h3>
                 <!-- An ordered list -->
-                <li>HyperionDev : Software Engineering (Still busy with)</li>
+                <li>HyperionDev : Software Engineering</li>
                 <li>RiskZA : ISO 9001 - Internal and Supplier Audits</li>
                 <li>LearnFast : Manage SharePoint online and OneDrive</li>
                 <li>NOSA : Intro to SAMTRAC</li>
